--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@yuki/tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": { "@/*": ["./*"] }
+    "paths": { "@/*": ["./*"], "@yuki/ui/*": ["../../packages/ui/src/*"] }
   },
   "include": [".", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
