--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -5,9 +5,18 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./oauth": "./src/oauth.ts",
-    "./env": "./src/env.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./src/index.ts"
+    },
+    "./oauth": {
+      "types": "./dist/oauth.d.ts",
+      "default": "./src/oauth.ts"
+    },
+    "./env": {
+      "types": "./dist/env.d.ts",
+      "default": "./src/env.ts"
+    }
   },
   "scripts": {
     "build": "tsc",
@@ -23,7 +32,7 @@
     "@oslojs/encoding": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@yuki/db": "workspace:*",
-    "arctic": "^3.1.2",
+    "arctic": "^3.1.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
