--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,7 +40,8 @@
     "lucide-react": "^0.473.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.7",
