--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "bun with-env next build",
     "clean": "git clean -xdf .cache .next .turbo node_modules",
-    "dev": "bun with-env next dev --turbopack",
+    "dev": "bun with-env next dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "start": "bun with-env next start",
@@ -16,7 +16,7 @@
   "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query": "^5.64.2",
     "@trpc/client": "^11.0.0-rc.694",
     "@trpc/react-query": "^11.0.0-rc.694",
     "@trpc/server": "^11.0.0-rc.694",
@@ -24,24 +24,24 @@
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
-    "next": "15.1.5",
+    "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "superjson": "^2.2.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "^19.0.7",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@types/node": "^20",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
-    "@yuki/tailwind-config": "workspace:*",
     "dotenv-cli": "^8.0.0",
     "eslint": "latest",
     "postcss": "^8.5.1",
     "prettier": "latest",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "latest"
   }
 }
