--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.64.2",
-    "@trpc/client": "^11.0.0-rc.694",
-    "@trpc/react-query": "^11.0.0-rc.694",
-    "@trpc/server": "^11.0.0-rc.694",
+    "@trpc/client": "^11.0.0-rc.724",
+    "@trpc/react-query": "^11.0.0-rc.724",
+    "@trpc/server": "^11.0.0-rc.724",
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
@@ -32,11 +32,12 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^20",
+    "@types/node": "^20.17.16",
     "@types/react": "^19.0.8",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "^19.0.3",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
+    "@yuki/tsconfig": "workspace:*",
     "dotenv-cli": "^8.0.0",
     "eslint": "latest",
     "postcss": "^8.5.1",
