--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,6 @@
   "$schema": "https://turborepo.org/schema.json",
   "ui": "tui",
   "tasks": {
-    "topo": { "dependsOn": ["^topo"] },
     "build": {
       "dependsOn": ["^gnr", "^build"],
       "outputs": [".cache/tsbuildinfo.json", "dist/**"]
@@ -15,11 +14,11 @@
       "outputLogs": "new-only"
     },
     "lint": {
-      "dependsOn": ["^topo", "^lint"],
+      "dependsOn": ["^gnr", "^lint"],
       "outputs": [".cache/.eslintcache"]
     },
     "typecheck": {
-      "dependsOn": ["^topo", "^typecheck"],
+      "dependsOn": ["^gnr", "^typecheck"],
       "outputs": [".cache/tsbuildinfo.json"]
     },
     "push": { "cache": false, "interactive": true },
