--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
-  "compilerOptions": {
-    "rootDir": "."
-  },
+  "compilerOptions": {},
   "include": ["src"],
   "exclude": ["node_modules"]
 }
