--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "packageManager": "bun@1.2.0",
   "engines": {
-    "bun": "^1.1.43",
+    "bun": ">=1.2.0",
     "node": ">=20.18.1"
   }
 }
