fix(tailwindcss): fix Tailwindcss IntelliSense dont show completion

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,7 +20,7 @@
         "./src/hooks/*.tsx"
       ]
     },
-    "./tailwind.css": "./src/tailwind.css"
+    "./index.css": "./src/index.css"
   },
   "scripts": {
     "build": "tsc",
