--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,7 +16,7 @@
   "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query": "^5.65.1",
     "@trpc/client": "^11.0.0-rc.729",
     "@trpc/react-query": "^11.0.0-rc.729",
     "@trpc/server": "^11.0.0-rc.729",
@@ -25,14 +25,15 @@
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "superjson": "^2.2.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^22.10.10",
+    "@tailwindcss/postcss": "^4.0.1",
+    "@types/node": "^22.12.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@yuki/eslint-config": "workspace:*",
@@ -42,7 +43,7 @@
     "eslint": "latest",
     "postcss": "^8.5.1",
     "prettier": "latest",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^4.0.1",
     "typescript": "latest"
   }
 }
