--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -25,6 +25,7 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
+    "@node-rs/argon2": "^2.0.2",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.12.0",
