feat(auth): update logic

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,8 @@ DATABASE_URL="postgres://[USERNAME]:[PASSWORD]@ep-lively-haze-a10zei6o-pooler.ap
 
 # Preconfigured Discord OAuth provider, works out-of-the-box
 # @see https://arcticjs.dev/guides/oauth2
-DISCORD_ID=''
-DISCORD_SECRET=''
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
