--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -10,6 +10,10 @@
       "react-server": "./src/index.rsc.ts",
       "default": "./src/index.ts"
     },
+    "./react": {
+      "types": "./dist/react.d.ts",
+      "default": "./src/react.tsx"
+    },
     "./env": {
       "types": "./dist/env.d.ts",
       "default": "./src/env.ts"
@@ -25,13 +29,13 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "@node-rs/argon2": "^2.0.2",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@yuki/db": "workspace:*",
-    "arctic": "^3.3.0",
-    "next": "15.1.7",
+    "arctic": "^3.4.0",
+    "next": "15.2.0",
+    "react": "^19.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
