--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,6 +1,6 @@
 {
+  "extends": "@yuki/tsconfig/react-library.json",
   "compilerOptions": {},
-  "exclude": ["node_modules"],
-  "extends": "@yuki/tsconfig/internal-package.json",
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
