--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   },
   "prettier": "@yuki/prettier-config",
   "devDependencies": {
-    "@turbo/gen": "2.4.0",
+    "@turbo/gen": "^2.4.4",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
     "prettier": "^3.5.2",
-    "turbo": "2.4.0",
+    "turbo": "^2.4.4",
     "typescript": "^5.7.3"
   },
   "packageManager": "bun@1.2.4",
