feat(auth): implement password hashing utility
Add Password class with hash and verify methods using SHA3-256 for
secure password handling with salting via environment configuration.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@
 # The database URL is used to connect to your Neon database (pooler).
 DATABASE_URL="postgres://[USERNAME]:[PASSWORD]@ep-lively-haze-a10zei6o-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 
+# The secret used to hash password
+# generate a new secret using `openssl rand -base64 32`
+AUTH_SECRET=
 # Preconfigured Discord OAuth provider, works out-of-the-box
 # @see https://arcticjs.dev/guides/oauth2
 DISCORD_CLIENT_ID=
