--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@yuki/auth": "workspace:*",
     "@yuki/db": "workspace:*",
     "@yuki/ui": "workspace:*",
+    "@yuki/validators": "workspace:*",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
