--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -33,10 +33,10 @@
     "@oslojs/encoding": "^1.1.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@yuki/db": "workspace:*",
+    "@yuki/validators": "workspace:*",
     "arctic": "^3.5.0",
     "next": "15.2.3",
-    "react": "^19.0.0",
-    "zod": "^3.24.2"
+    "react": "^19.0.0"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
