--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -1,23 +1,11 @@
 {
-  "name": "@yuki/auth",
-  "version": "2.0.0",
+  "name": "@yuki/env",
+  "version": "0.1.0",
   "private": true,
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "react-server": "./src/index.rsc.ts",
-      "default": "./src/index.ts"
-    },
-    "./react": {
-      "types": "./dist/react.d.ts",
-      "default": "./src/react.tsx"
-    },
-    "./env": {
-      "types": "./dist/env.d.ts",
-      "default": "./src/env.ts"
-    }
+    ".": "./src/index.ts"
   },
   "scripts": {
     "build": "tsc",
@@ -29,14 +17,8 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "@oslojs/crypto": "^1.0.1",
-    "@oslojs/encoding": "^1.1.0",
-    "@yuki/db": "workspace:*",
-    "@yuki/env": "workspace:*",
-    "@yuki/validators": "workspace:*",
-    "arctic": "^3.5.0",
-    "next": "15.2.3",
-    "react": "^19.0.0"
+    "@standard-schema/spec": "^1.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
