--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,8 +28,7 @@
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "superjson": "^2.2.2",
-    "zod": "^3.24.2"
+    "superjson": "^2.2.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.14",
