--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "lib": ["DOM"]
+  },
   "include": ["src"],
   "exclude": ["node_modules"]
 }
