--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "@yuki/tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": { "@/*": ["./*"], "@yuki/ui/*": ["../../packages/ui/src/*"] }
+    "paths": {
+      "@/*": ["./*"],
+      "@yuki/ui/*": ["../../packages/ui/src/*"]
+    }
   },
   "include": [
     ".",
