--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,10 +7,6 @@
       "@yuki/ui/*": ["../../packages/ui/src/*"]
     }
   },
-  "include": [
-    ".",
-    ".next/types/**/*.ts",
-    "../../tooling/typescript/types.d.ts"
-  ],
+  "include": [".", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
