--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,6 +4,6 @@
     "baseUrl": ".",
     "paths": { "@yuki/ui/*": ["./src/*"] }
   },
-  "include": ["src", "../../tooling/typescript/types.d.ts"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
