--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,9 +40,7 @@
     "lucide-react": "^0.483.0",
     "next-themes": "^0.4.6",
     "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.15",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
@@ -50,6 +48,8 @@
     "@yuki/tsconfig": "workspace:*",
     "eslint": "latest",
     "prettier": "latest",
+    "tailwindcss": "^4.0.15",
+    "tw-animate-css": "^1.2.4",
     "typescript": "latest"
   }
 }
