chore: minor change

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,10 +15,7 @@
     },
     "./hooks/*": {
       "types": "./dist/hooks/*.d.ts",
-      "default": [
-        "./src/hooks/*.ts",
-        "./src/hooks/*.tsx"
-      ]
+      "default": "./src/hooks/*.ts"
     },
     "./tailwind.css": "./src/tailwind.css"
   },
