--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,14 +24,14 @@
     "@yuki/env": "workspace:*",
     "@yuki/ui": "workspace:*",
     "@yuki/validators": "workspace:*",
-    "next": "15.2.3",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.15",
-    "@types/node": "^20.17.25",
+    "@tailwindcss/postcss": "^4.0.16",
+    "@types/node": "20.17.25",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@yuki/eslint-config": "workspace:*",
@@ -41,7 +41,7 @@
     "eslint": "latest",
     "postcss": "^8.5.3",
     "prettier": "latest",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^4.0.16",
     "typescript": "latest"
   }
 }
