--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -31,10 +31,12 @@
   "dependencies": {
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
+    "@tanstack/react-query": "^5.69.0",
     "@yuki/db": "workspace:*",
     "@yuki/env": "workspace:*",
-    "@yuki/validators": "workspace:*",
-    "arctic": "^3.5.0"
+    "arctic": "^3.5.0",
+    "next": "15.2.4",
+    "react": "^19.0.0"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
