--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -34,8 +34,9 @@
     "@standard-schema/spec": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.483.0",
+    "lucide-react": "^0.484.0",
     "next-themes": "^0.4.6",
+    "react": "^19.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2"
   },
@@ -45,7 +46,7 @@
     "@yuki/tsconfig": "workspace:*",
     "eslint": "latest",
     "prettier": "latest",
-    "tailwindcss": "^4.0.15",
+    "tailwindcss": "^4.0.16",
     "tw-animate-css": "^1.2.4",
     "typescript": "latest"
   }
