--- a/apps/react-router/package.json
+++ b/apps/react-router/package.json
@@ -7,7 +7,7 @@
     "clean": "git clean -xdf .cache .react-router .turbo node_modules",
     "dev": "react-router dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
-    "lint": "eslint",
+    "lint": "react-router typegen && eslint",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc --noEmit"
   },
