--- a/apps/react-router/tsconfig.json
+++ b/apps/react-router/tsconfig.json
@@ -9,9 +9,8 @@
     }
   },
   "include": [
-    "**/*",
-    "**/.server/**/*",
-    "**/.client/**/*",
+    "**/*.ts",
+    "**/*.tsx",
     ".react-router/types/**/*",
     "../../packages/ui/lucide-react.d.ts"
   ],
