chore: add expo app

--- a/apps/react-router/tsconfig.json
+++ b/apps/react-router/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./app/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
