--- a/apps/nextjs/turbo.json
+++ b/apps/nextjs/turbo.json
@@ -1,11 +1,13 @@
 {
-  "$schema": "https://turborepo.org/schema.json",
+  "$schema": "../../node_modules/turbo/schema.json",
   "extends": ["//"],
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts"]
     },
-    "dev": { "persistent": true }
+    "dev": {
+      "persistent": true
+    }
   }
 }
