chore: minor changes

--- a/apps/react-router/turbo.json
+++ b/apps/react-router/turbo.json
@@ -4,9 +4,10 @@
   "tasks": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".react-router/**", "build/**"]
+      "outputs": [".react-router/**", ".vercel/**", "build/**"]
     },
     "dev": {
+      "with": ["@yuki/api#dev"],
       "persistent": true
     }
   }
