--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
         shell: bash
         run: cp .env.example .env
 
+      - name: Generate prisma client
+        run: bun db:generate
+
       - name: Lint
         run: bun lint && bun lint:ws
 
@@ -52,6 +55,9 @@ jobs:
 
       - name: Setup
         uses: ./tooling/github/setup
+
+      - name: Generate prisma client
+        run: bun db:generate
 
       - name: Typecheck
         run: bun typecheck
