chore(ci): remove prisma generate

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,7 +11,7 @@
     }
   },
   "scripts": {
-    "build": "bun gnr && tsc",
+    "build": "tsc",
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
