fix: neon adapter

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -27,9 +27,11 @@
   "dependencies": {
     "@neondatabase/serverless": "^1.0.0",
     "@prisma/adapter-neon": "^6.6.0",
-    "@prisma/client": "^6.6.0"
+    "@prisma/client": "^6.6.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
+    "@types/ws": "^8.18.1",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
