--- a/turbo.json
+++ b/turbo.json
@@ -13,7 +13,7 @@
       "cache": false
     },
     "dev": {
-      "dependsOn": ["^gnr", "^dev"],
+      "dependsOn": ["^dev"],
       "cache": false,
       "persistent": false
     },
