--- a/apps/react-router/package.json
+++ b/apps/react-router/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "clean": "git clean -xdf .cache .react-router .turbo node_modules",
+    "clean": "git clean -xdf .cache .react-router .turbo .vercel build node_modules",
     "dev": "react-router dev",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "react-router typegen && eslint",
@@ -43,7 +43,7 @@
     "@yuki/tsconfig": "workspace:*",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3",
-    "vite": "^6.2.5",
+    "vite": "^6.2.6",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
