feat: add native app

--- a/apps/react-router/tsconfig.json
+++ b/apps/react-router/tsconfig.json
@@ -10,6 +10,8 @@
   },
   "include": [
     "src",
+    "vite.config.ts",
+    "react-router.config.ts",
     ".react-router/types/**/*",
     "../../packages/ui/lucide-react.d.ts"
   ],
