--- a/apps/react-router/package.json
+++ b/apps/react-router/package.json
@@ -25,8 +25,8 @@
     "@yuki/ui": "workspace:*",
     "@yuki/validators": "workspace:*",
     "isbot": "^5.1.26",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-router": "^7.5.0",
     "superjson": "^2.2.2"
   },
@@ -35,14 +35,14 @@
     "@react-router/fs-routes": "^7.5.0",
     "@tailwindcss/vite": "^4.1.3",
     "@types/node": "22.14.1",
-    "@types/react": "^19.1.1",
+    "@types/react": "~19.0.10",
     "@types/react-dom": "^19.1.2",
     "@vercel/react-router": "^1.1.0",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
     "tailwindcss": "^4.1.3",
-    "typescript": "^5.8.3",
+    "typescript": "~5.8.3",
     "vite": "^6.2.6",
     "vite-tsconfig-paths": "^5.1.4"
   }
