--- a/apps/native/turbo.json
+++ b/apps/native/turbo.json
@@ -2,13 +2,9 @@
   "$schema": "../../node_modules/turbo/schema.json",
   "extends": ["//"],
   "tasks": {
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**", "next-env.d.ts"]
-    },
     "dev": {
-      "with": ["@yuki/api#dev"],
-      "persistent": true
+      "persistent": true,
+      "interactive": true
     }
   }
 }
