chore: bump deps

--- a/apps/react-router/tsconfig.json
+++ b/apps/react-router/tsconfig.json
@@ -12,8 +12,7 @@
     "src",
     "vite.config.ts",
     "react-router.config.ts",
-    ".react-router/types/**/*",
-    "../../packages/ui/lucide-react.d.ts"
+    ".react-router/types/**/*"
   ],
   "exclude": ["node_modules"]
 }
