--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -20,7 +20,7 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "zod": "^3.24.2"
+    "zod": "^4.0.0-beta.20250415T232143"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
