--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -25,10 +25,8 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "@neondatabase/serverless": "^1.0.0",
     "@prisma/adapter-neon": "^6.6.0",
-    "@prisma/client": "^6.6.0",
-    "ws": "^8.18.1"
+    "@prisma/client": "^6.6.0"
   },
   "devDependencies": {
     "@types/ws": "^8.18.1",
