--- a/apps/native/tsconfig.json
+++ b/apps/native/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@yuki/tsconfig/base.json",
   "compilerOptions": {
     "jsx": "react-native",
+    "lib": ["dom"],
     "checkJs": true,
     "moduleSuffixes": [".ios", ".android", ".native", ""],
     "baseUrl": ".",
