--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -18,7 +18,7 @@
   "prettier": "@yuki/prettier-config",
   "dependencies": {
     "@standard-schema/spec": "^1.0.0",
-    "zod": "^3.24.2"
+    "zod": "^4.0.0-beta.20250415T232143"
   },
   "devDependencies": {
     "@yuki/eslint-config": "workspace:*",
