chore: update LICENSE

--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -44,7 +44,7 @@
     "superjson": "^2.2.2"
   },
   "devDependencies": {
-    "@types/react": "~19.0.10",
+    "@types/react": "19.0.10",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
     "@yuki/tsconfig": "workspace:*",
