--- a/apps/react-router/package.json
+++ b/apps/react-router/package.json
@@ -35,7 +35,7 @@
     "@react-router/fs-routes": "^7.5.0",
     "@tailwindcss/vite": "^4.1.4",
     "@types/node": "22.14.1",
-    "@types/react": "~19.0.10",
+    "@types/react": "19.0.10",
     "@types/react-dom": "^19.1.2",
     "@vercel/react-router": "^1.1.0",
     "@yuki/eslint-config": "workspace:*",
