docs: update README.md

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ DISCORD_CLIENT_SECRET=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+# Web URL for proxy redirection in native app
+NEXT_PUBLIC_WEB_URL=
