--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -17,7 +17,7 @@
   },
   "prettier": "@yuki/prettier-config",
   "dependencies": {
-    "@standard-schema/spec": "^1.0.0",
+    "@t3-oss/env-core": "^0.12.0",
     "zod": "^4.0.0-beta.20250415T232143"
   },
   "devDependencies": {
