--- a/packages/env/tsconfig.json
+++ b/packages/env/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
-  "compilerOptions": {
-    "lib": ["DOM"]
-  },
+  "compilerOptions": {},
   "include": ["src"],
   "exclude": ["node_modules"]
 }
