chore(native): build apk script

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ GOOGLE_CLIENT_SECRET=
 
 # Web URL for proxy redirection in native app
 NEXT_PUBLIC_WEB_URL=
+
+# The EAS project ID is used to identify your project in Expo Application Services (EAS)
+EAS_PROJECT_ID=
