--- a/apps/native/eas.json
+++ b/apps/native/eas.json
@@ -5,11 +5,9 @@
   },
   "build": {
     "base": {
-      "node": "22.12.0",
-      "pnpm": "9.15.4",
-      "ios": {
-        "resourceClass": "m-medium"
-      }
+      "node": "22.14.0",
+      "bun": "1.2.10",
+      "ios": { "resourceClass": "m-medium" }
     },
     "development": {
       "extends": "base",
@@ -19,9 +17,8 @@
     "preview": {
       "extends": "base",
       "distribution": "internal",
-      "ios": {
-        "simulator": true
-      }
+      "ios": { "simulator": true },
+      "android": { "buildType": "apk", "gradleCommand": ":app:assembleRelease" }
     },
     "production": {
       "extends": "base"
