feat(db): use prisma output dir

--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -2,5 +2,5 @@
   "extends": "@yuki/tsconfig/internal-package.json",
   "compilerOptions": {},
   "include": ["prisma.config.ts", "src"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/generated"]
 }
