--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "skipLibCheck": true
+  },
   "include": ["src", "prisma.config.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/generated"]
 }
