--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
-  "compilerOptions": {
-    "skipLibCheck": true
-  },
+  "compilerOptions": {},
   "include": ["src", "prisma.config.ts"],
-  "exclude": ["node_modules", "src/generated"]
+  "exclude": ["node_modules"]
 }
