fix(ci): typecheck error in db

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,22 +5,19 @@
   "license": "MIT",
   "type": "module",
   "exports": {
-    ".": {
-      "types": "./dist/src/index.d.ts",
-      "default": "./src/index.ts"
-    }
+    ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "bun gnr && tsc",
+    "build": "bun gnr",
     "clean": "git clean -xdf .cache .turbo dist generated node_modules",
-    "dev": "tsc",
+    "dev": "",
     "format": "prettier --check . --ignore-path ../../.gitignore",
-    "gnr": "bun with-env prisma generate",
+    "gnr": "bun with-env prisma generate && bun scripts/patch-prisma-generated.ts",
     "lint": "eslint",
     "migrate": "bun with-env prisma migrate dev --skip-generate",
     "push": "bun with-env prisma db push",
     "studio": "bun with-env prisma studio -b none",
-    "typecheck": "tsc --noEmit --emitDeclarationOnly false",
+    "typecheck": "",
     "with-env": "dotenv -e ../../.env --"
   },
   "prettier": "@yuki/prettier-config",
