--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@yuki/tsconfig/internal-package.json",
   "compilerOptions": {},
-  "include": ["src", "prisma.config.ts"],
+  "include": ["src", "scripts", "prisma.config.ts"],
   "exclude": ["node_modules", "src/generated"]
 }
