--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "bump-deps": "bunx --bun npm-check-updates --deep -u -x react-day-picker && bun install",
     "clean": "git clean -xdf node_modules",
     "clean:workspaces": "turbo run clean",
-    "db:generate": "turbo -F @yuki/db gnr",
-    "db:migrate": "turbo -F @yuki/db migrate",
-    "db:push": "turbo -F @yuki/db push",
-    "db:studio": "turbo -F @yuki/db studio",
+    "db:deploy": "turbo -F @yuki/db db:deploy",
+    "db:generate": "turbo -F @yuki/db db:generate",
+    "db:migrate": "turbo -F @yuki/db db:migrate",
+    "db:push": "turbo -F @yuki/db db:push",
+    "db:studio": "turbo -F @yuki/db db:studio",
     "dev": "turbo watch dev --continue",
     "format": "turbo run format --continue -- --cache --cache-location .cache/.prettiercache",
     "format:fix": "turbo run format --continue -- --write --cache --cache-location .cache/.prettiercache",
