--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,7 @@
   "ui": "tui",
   "tasks": {
     "build": {
+      "dependsOn": ["^build", "^db:generate"],
       "outputs": [".cache/tsbuildinfo.json", "dist/**"]
     },
     "clean": {
