--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -41,6 +41,10 @@
     "superjson": "^2.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/runtime": "^7.27.0",
+    "@types/babel__core": "^7.20.5",
     "@types/react": "19.0.10",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
