--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -23,16 +23,13 @@
     "@yuki/api": "workspace:*",
     "@yuki/auth": "workspace:*",
     "expo": "~53.0.0-preview.7",
-    "expo-blur": "~14.1.1",
     "expo-constants": "~17.1.1",
-    "expo-haptics": "~14.1.1",
+    "expo-dev-client": "^5.0.20",
     "expo-linking": "~7.1.1",
     "expo-router": "~5.0.2-preview.3",
     "expo-secure-store": "~14.2.0",
     "expo-splash-screen": "~0.30.2",
     "expo-status-bar": "~2.2.0",
-    "expo-symbols": "~0.4.1",
-    "expo-system-ui": "~5.0.2",
     "expo-web-browser": "~14.1.2",
     "lucide-react-native": "^0.501.0",
     "react": "19.0.0",
@@ -44,6 +41,10 @@
     "superjson": "^2.2.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/runtime": "^7.27.0",
+    "@types/babel__core": "^7.20.5",
     "@types/react": "19.0.10",
     "@yuki/eslint-config": "workspace:*",
     "@yuki/prettier-config": "workspace:*",
